feat: add login page

--- a/cadastro2.html
+++ b/cadastro2.html
@@ -17,8 +17,12 @@
     <main>
         <form>
             <p class="main-text">Complete seu cadastro</p>
+
+            <p class="form-text"> Nome completo:</p>
+            <input type="text" id="name">
+
             <p class="form-text">Data de nascimento:</p>
-            <input type="date" id="birthday" placeholder=" Data de nascimento:">
+            <input type="date" id="birthday">
 
             <p class="form-text">Informe seu sexo:</p>
             <div class="sex-options-div">
@@ -38,8 +42,13 @@
                 </section>
             </div>
 
-
-            <select name="" id=""></select>
+            <p class="form-text">Sua escolaridade: </p>
+            <select id="school">
+                <option value="lvl1">Fundamental 1</option>
+                <option value="lvl2">Fundamental 2</option>
+                <option value="lvl3">Ensino Médio</option>
+            </select>
+            
 
             <button>Finalizar</button>
         </form>
