--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -4,24 +4,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN - Prefeitura de Joinville</title>
-    <link rel="stylesheet" href="assets/style/cadastro.css">
+    <link rel="stylesheet" href="../assets/style/cadastro.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
     <header>
-            <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
+            <i class='bx bx-menu'></i>
+            <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
 
     <main>
         <form>
-            <p class="main-text">Login</p>
+            <p class="main-text">Cadastre-se</p>
                 <input type="email" id="email" placeholder=" E-mail:">
 
                 <input type="password" id="password"
                 placeholder=" Senha:">
 
+                <input type="password" id="confirmpassword" placeholder=" Confirme a senha: ">
 
-                <button><a>Entrar</a></button>
+                <button><a href="cadastro2.html">Finalizar</a></button>
         </form>
     </main>
 </body>
