--- a/pages/cadastro2.html
+++ b/pages/cadastro2.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN - Prefeitura de Joinville</title>
-    <link rel="stylesheet" href="assets/style/cadastro.css">
+    <link rel="stylesheet" href="../assets/style/cadastro.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
     <header>
-        <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
+        <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
 
     <main>
