--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -8,23 +8,20 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-            <i class='bx bx-menu'></i>
-            <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
-    </header>
+    
 
     <main>
-        <form>
-            <p class="main-text">Cadastre-se</p>
-                <input type="email" id="email" placeholder=" E-mail:">
-
-                <input type="password" id="password"
-                placeholder=" Senha:">
-
-                <input type="password" id="confirmpassword" placeholder=" Confirme a senha: ">
-
-                <button><a href="cadastro2.html">Finalizar</a></button>
-        </form>
+        <label>
+            <form>
+                <p class="main-text">Cadastre-se</p>
+                    <input type="email" id="email" placeholder=" E-mail:">
+                    <input type="password" id="password"
+                    placeholder=" Senha:">
+                    <input type="password" id="confirmpassword" placeholder=" Confirme a senha: ">
+                    <button><a href="cadastro2.html">Seguinte</a></button>
+                <p>Já possui uma conta?/Login</p>
+            </form>
+        </label>
     </main>
 </body>
 </html>
