--- a/pages/login.html
+++ b/pages/login.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>EPTRAN - Prefeitura de Joinville</title>
-    <link rel="stylesheet" href="../assets/style/cadastro.css">
+    <link rel="stylesheet" href="../assets/style/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 <body>
-    <header>
-            <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
-    </header>
+    
 
     <main>
         <form>
@@ -19,9 +17,11 @@
 
                 <input type="password" id="password"
                 placeholder=" Senha:">
+                <a class="forget-password">Esqueci minha senha</a>
 
+                <button><a class="next">Seguinte</a></button>
 
-                <button><a>Entrar</a></button>
+                <p class="login-text">Não possui uma conta?/cadastro</p>
         </form>
     </main>
 </body>
