refactor: responsive login pages

--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -18,7 +18,7 @@
                     <input type="password" id="password"
                     placeholder=" Senha:">
                     <input type="password" id="confirmpassword" placeholder=" Confirme a senha: ">
-                    <button><a href="cadastro2.html">Seguinte</a></button>
+                    <button class="color-button"><a href="cadastro2.html">Seguinte</a></button>
                 <p>Já possui uma conta?/Login</p>
             </form>
         </label>
