--- a/pages/cadastro2.html
+++ b/pages/cadastro2.html
@@ -16,13 +16,15 @@
             <p class="main-text">Complete seu cadastro</p>
 
             
-            <input type="text" id="name" placeholder="Nome completo">
+            <input type="text" id="name" placeholder="  Nome completo">
 
-            <p class="form-text">Data de nascimento:</p>
-            <input type="date" id="birthday">
+            <div class="birth">
+                <p class="form-text">Data de nascimento:</p>
+                <input type="date" id="birthday">
+            </div>
 
-            <p class="form-text">Informe seu sexo:</p>
             <div class="sex-options-div">
+                <p class="form-text">Informe seu sexo:</p>
                 <section class="sex-options-section">
                     <div class="sex-option">
                         <input type="radio" id="male" name="gender" value="male">
@@ -48,7 +50,7 @@
             </select>
             
 
-            <button><a href="#" class="finish">Finalizar</a></button>
+            <button class="color-button"><a href="#" class="finish">Finalizar</a></button>
         </form>
     </main>
 </body>
