--- a/pages/login.html
+++ b/pages/login.html
@@ -13,10 +13,10 @@
     <main>
         <form>
             <p class="main-text">Login</p>
-                <input type="email" id="email" placeholder=" E-mail:">
+                <input type="email" id="email" class="email-input" placeholder="  E-mail:">
 
                 <input type="password" id="password"
-                placeholder=" Senha:">
+                placeholder="  Senha:">
                 <a class="forget-password">Esqueci minha senha</a>
 
                 <button><a class="next">Seguinte</a></button>
