--- a/index.html
+++ b/index.html
@@ -15,6 +15,39 @@
             <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
 
+    <header>
+        <i class='bx bx-arrow-back'></i>
+        <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
+    </header>
+    <div class="open-menu">
+
+        <div class="top-open-menu">
+            <section class="open-menu-options">
+                <i class='bx bx-home-alt'></i>
+                <p>Início</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-info-circle' ></i>
+                <p>Sobre nós</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-joystick' ></i>
+                <p>Jogos</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-news' ></i>
+                <p>Notícias</p>
+            </section>
+        </div>
+
+        <section class="open-menu-options">
+                <i class='bx bx-user-circle' ></i>
+                <p>Perfil</p>
+        </section>
+
+
+    </div>
+
     <img src="assets/img/paralelograms.png" id="paralelograms">
 
     <main>
@@ -60,5 +93,6 @@
         </div>
         <p class="address">R. Caçador, 112 - Atiradores, Joinville - SC, 89203-610</p>
     </footer>
+
 </body>
 </html>
