feat: finish the static part of responsive menu

--- a/index.html
+++ b/index.html
@@ -15,37 +15,37 @@
             <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
 
-    <header>
-        <i class='bx bx-arrow-back'></i>
-        <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
-    </header>
-    <div class="open-menu">
-
-        <div class="top-open-menu">
+    <div class="open-header">
+        <header>
+            <i class='bx bx-left-arrow-alt'></i>
+            <img src="assets/img/logo-prefeitura-horizontal.png" alt="">
+        </header>
+        <div class="open-menu">
+            <div class="top-open-menu">
+                <section class="open-menu-options">
+                    <i class='bx bx-home-alt'></i>
+                    <p>Início</p>
+                </section>
+                <section class="open-menu-options">
+                    <i class='bx bx-info-circle' ></i>
+                    <p>Sobre nós</p>
+                </section>
+                <section class="open-menu-options">
+                    <i class='bx bx-joystick' ></i>
+                    <p>Jogos</p>
+                </section>
+                <section class="open-menu-options">
+                    <i class='bx bx-news' ></i>
+                    <p>Notícias</p>
+                </section>
+            </div>
+    
             <section class="open-menu-options">
-                <i class='bx bx-home-alt'></i>
-                <p>Início</p>
+                    <i class='bx bx-user-circle' ></i>
+                    <p>Perfil</p>
             </section>
-            <section class="open-menu-options">
-                <i class='bx bx-info-circle' ></i>
-                <p>Sobre nós</p>
-            </section>
-            <section class="open-menu-options">
-                <i class='bx bx-joystick' ></i>
-                <p>Jogos</p>
-            </section>
-            <section class="open-menu-options">
-                <i class='bx bx-news' ></i>
-                <p>Notícias</p>
-            </section>
+    
         </div>
-
-        <section class="open-menu-options">
-                <i class='bx bx-user-circle' ></i>
-                <p>Perfil</p>
-        </section>
-
-
     </div>
 
     <img src="assets/img/paralelograms.png" id="paralelograms">
