--- a/index.html
+++ b/index.html
@@ -48,51 +48,49 @@
         </div>
     </div>
 
-    <img src="assets/img/paralelograms.png" id="paralelograms">
-
-    <main>
-        <div class="texts">
-            <section>
-                <h2><span id="underline">Nós</span> somos o <strong>Trânsito</strong></h2>
-            </section>
-            <section>
-                <h2 id="small-text">Nossa Missão é</h2>
-                <h2> Educar para <strong>SALVAR VIDAS</strong></h2>
-            </section>
-        </div>
-
-        <div class="pictures">
-            <section class="pictures-container">
-                <img src="assets/img/about-us.png">
-                <p>Sobre nós</p>
-            </section>
-            <section class="pictures-container">
-                <p>Jogos</p>
-                <img src="assets/img/games.png" alt="">
-            </section>
-            <section class="pictures-container">
-                <img src="assets/img/news.png" alt="">
-                <p>Notícias</p>
-            </section>
-        </div>
-    </main>
-
-
-    <footer>
-        <div class="logos">
-            <img src="assets/img/logo-prefeitura-vertical-branco.png" alt="" class="logo-jlle">
-            <img src="assets/img/logo-eptran.png" alt="">
-        </div>
-        <div class="phone-number">
-            <i class='bx bx-phone'></i>
-            <p>(47) 3431-1541</p>
-        </div>
-        <div class="email">
-            <i class='bx bx-envelope'></i>
-            <p>eptran@joinville.sc.gov.br</p>
-        </div>
-        <p class="address">R. Caçador, 112 - Atiradores, Joinville - SC, 89203-610</p>
-    </footer>
+    <div class="content">
+        <img src="assets/img/paralelograms.png" id="paralelograms">
+        <main>
+            <div class="texts">
+                <section>
+                    <h2><span id="underline">Nós</span> somos o <strong>Trânsito</strong></h2>
+                </section>
+                <section>
+                    <h2 id="small-text">Nossa Missão é</h2>
+                    <h2> Educar para <strong>SALVAR VIDAS</strong></h2>
+                </section>
+            </div>
+            <div class="pictures">
+                <section class="pictures-container">
+                    <img src="assets/img/about-us.png">
+                    <p>Sobre nós</p>
+                </section>
+                <section class="pictures-container">
+                    <p>Jogos</p>
+                    <img src="assets/img/games.png" alt="">
+                </section>
+                <section class="pictures-container">
+                    <img src="assets/img/news.png" alt="">
+                    <p>Notícias</p>
+                </section>
+            </div>
+        </main>
+        <footer>
+            <div class="logos">
+                <img src="assets/img/logo-prefeitura-vertical-branco.png" alt="" class="logo-jlle">
+                <img src="assets/img/logo-eptran.png" alt="">
+            </div>
+            <div class="phone-number">
+                <i class='bx bx-phone'></i>
+                <p>(47) 3431-1541</p>
+            </div>
+            <div class="email">
+                <i class='bx bx-envelope'></i>
+                <p>eptran@joinville.sc.gov.br</p>
+            </div>
+            <p class="address">R. Caçador, 112 - Atiradores, Joinville - SC, 89203-610</p>
+        </footer>
+    </div>
 
 </body>
 </html>
