refact: add header on Login oages

--- a/pages/cadastro2.html
+++ b/pages/cadastro2.html
@@ -7,9 +7,16 @@
     <title>EPTRAN - Prefeitura de Joinville</title>
     <link rel="stylesheet" href="../assets/style/cadastro2.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../assets/style/header.css">
+
 </head>
 
 <body>
+
+    <header>
+        <i class='bx bx-menu'></i>
+        <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
+    </header>
 
     <main>
         <form>
