--- a/pages/login.html
+++ b/pages/login.html
@@ -6,9 +6,15 @@
     <title>EPTRAN - Prefeitura de Joinville</title>
     <link rel="stylesheet" href="../assets/style/login.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../assets/style/header.css">
+
 </head>
 <body>
-    
+    <header>
+        <i class='bx bx-menu'></i>
+        <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
+    </header>
+
 
     <main>
         <form>
