--- a/pages/jogos.html
+++ b/pages/jogos.html
@@ -4,70 +4,102 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jogos - EPTRAN</title>
-    <link rel="stylesheet" href="../assets/style/header.css">
     <link rel="stylesheet" href="../assets/style/jogos.css">
     <link rel="stylesheet" href="../assets/style/footer.css">
+    <link rel="stylesheet" href="../assets/style/header.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 </head>
 
 <body>
-    <header>
-        <i class='bx bx-menu'></i>
+<header id="regular-header">
+        <i class='bx bx-menu menu-button' style="cursor: pointer;" onclick="openMenu()"></i>
+        <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
+</header>
+
+<div class="open-header">
+    <header id="open-header" class="hide">
+        <i class='bx bx-left-arrow-alt menu-button'onclick="closeMenu()" style="cursor: pointer;" ></i>
         <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
+    <div class="open-menu">
+        <div class="top-open-menu">
+            <section class="open-menu-options">
+                <i class='bx bx-home-alt'></i>
+                <p>Início</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-info-circle' ></i>
+                <p>Sobre nós</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-joystick' ></i>
+                <p>Jogos</p>
+            </section>
+            <section class="open-menu-options">
+                <i class='bx bx-news' ></i>
+                <p>Notícias</p>
+            </section>
+        </div>
 
-    <main>
-        <h1>Conheça nossos jogos educativos!</h1>
+        <section class="open-menu-options">
+                <i class='bx bx-user-circle' ></i>
+                <p>Perfil</p>
+        </section>
 
-        <div class="content">
+    </div>
+</div>
 
-            <div class="jogos-infantis">
-                <h3>Infantis ></h3>
-                <div class="games-container">
+    <div class="container">
+        <main>
+            <h1>Conheça nossos jogos educativos!</h1>
+            <div class="content">
+                <div class="jogos-infantis">
+                    <h3>Infantis ></h3>
+                    <div class="games-container">
+                        <div class="game-container">
+                            <img src="../assets/img/games.png" alt="">
+                            <h2>Jogo da memória</h2>
+                        </div>
+                        <div class="game-container">
+                            <img src="../assets/img/games.png" alt="">
+                            <h2>Colorir</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="10-anos">
+                    <h3>Para maiores de 10 anos ></h3>
                     <div class="game-container">
                         <img src="../assets/img/games.png" alt="">
-                        <h2>Jogo da memória</h2>
+                        <h2>Quiz</h2>
                     </div>
+                </div>
+                <div class="14-anos">
+                    <h3>Para maiores de 14 anos ></h3>
                     <div class="game-container">
                         <img src="../assets/img/games.png" alt="">
-                        <h2>Colorir</h2>
+                        <h2>GAT</h2>
                     </div>
                 </div>
             </div>
-
-            <div class="10-anos">
-                <h3>Para maiores de 10 anos ></h3>
-                <div class="game-container">
-                    <img src="../assets/img/games.png" alt="">
-                    <h2>Quiz</h2>
-                </div>
+        </main>
+        
+        <footer>
+            <div class="logos">
+                <img src="../assets/img/logo-prefeitura-vertical-branco.png" alt="" class="logo-jlle">
+                <img src="../assets/img/logo-eptran.png" alt="">
             </div>
-
-            <div class="14-anos">
-                <h3>Para maiores de 14 anos ></h3>
-                <div class="game-container">
-                    <img src="../assets/img/games.png" alt="">
-                    <h2>GAT</h2>
-                </div>
+            <div class="phone-number">
+                <i class='bx bx-phone'></i>
+                <p>(47) 3431-1541</p>
             </div>
-        </div>
-    </main>
-
-    <footer>
-        <div class="logos">
-            <img src="../assets/img/logo-prefeitura-vertical-branco.png" alt="" class="logo-jlle">
-            <img src="../assets/img/logo-eptran.png" alt="">
-        </div>
-        <div class="phone-number">
-            <i class='bx bx-phone'></i>
-            <p>(47) 3431-1541</p>
-        </div>
-        <div class="email">
-            <i class='bx bx-envelope'></i>
-            <p>eptran@joinville.sc.gov.br</p>
-        </div>
-        <p class="address">R. Caçador, 112 - Atiradores, Joinville - SC, 89203-610</p>
-    </footer>
+            <div class="email">
+                <i class='bx bx-envelope'></i>
+                <p>eptran@joinville.sc.gov.br</p>
+            </div>
+            <p class="address">R. Caçador, 112 - Atiradores, Joinville - SC, 89203-610</p>
+        </footer>
+    </div>
 
 </body>
+<script src="../js/openMenu.js"></script>
 </html>
