--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -60,7 +60,7 @@
                         placeholder=" Senha:">
                         <input type="password" id="confirmpassword" placeholder=" Confirme a senha: ">
                         <button class="color-button"><a href="cadastro2.html">Seguinte</a></button>
-                    <p>Já possui uma conta?/Login</p>
+                    <p><a href="login.html">Já possui uma conta?/Login</a></p>
                 </form>
             </label>
         </main>
