refact: improving header

--- a/pages/jogos.html
+++ b/pages/jogos.html
@@ -23,28 +23,34 @@
     </header>
     <div class="open-menu">
         <div class="top-open-menu">
-            <section class="open-menu-options">
-                <i class='bx bx-home-alt'></i>
-                <p>Início</p>
-            </section>
+            <a href="../index.html">
+                <section class="open-menu-options">
+                    <i class='bx bx-home-alt'></i>
+                    <p>Início</p>
+                </section>
+            </a>
             <section class="open-menu-options">
                 <i class='bx bx-info-circle' ></i>
                 <p>Sobre nós</p>
             </section>
-            <section class="open-menu-options">
-                <i class='bx bx-joystick' ></i>
-                <p>Jogos</p>
-            </section>
+            <a href="jogos.html">
+                <section class="open-menu-options">
+                    <i class='bx bx-joystick' ></i>
+                    <p>Jogos</p>
+                </section>
+            </a>
             <section class="open-menu-options">
                 <i class='bx bx-news' ></i>
                 <p>Notícias</p>
             </section>
         </div>
 
-        <section class="open-menu-options">
-                <i class='bx bx-user-circle' ></i>
-                <p>Perfil</p>
-        </section>
+        <a href="login.html">
+            <section class="open-menu-options user">
+                    <i class='bx bx-user-circle' ></i>
+                    <p>Perfil</p>
+            </section>
+        </a>
 
     </div>
 </div>
