--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -23,28 +23,34 @@
         </header>
         <div class="open-menu">
             <div class="top-open-menu">
-                <section class="open-menu-options">
-                    <i class='bx bx-home-alt'></i>
-                    <p>Início</p>
-                </section>
+                <a href="../index.html">
+                    <section class="open-menu-options">
+                        <i class='bx bx-home-alt'></i>
+                        <p>Início</p>
+                    </section>
+                </a>
                 <section class="open-menu-options">
                     <i class='bx bx-info-circle' ></i>
                     <p>Sobre nós</p>
                 </section>
-                <section class="open-menu-options">
-                    <i class='bx bx-joystick' ></i>
-                    <p>Jogos</p>
-                </section>
+                <a href="jogos.html">
+                    <section class="open-menu-options">
+                        <i class='bx bx-joystick' ></i>
+                        <p>Jogos</p>
+                    </section>
+                </a>
                 <section class="open-menu-options">
                     <i class='bx bx-news' ></i>
                     <p>Notícias</p>
                 </section>
             </div>
     
-            <section class="open-menu-options">
-                    <i class='bx bx-user-circle' ></i>
-                    <p>Perfil</p>
-            </section>
+            <a href="login.html">
+                <section class="open-menu-options user">
+                        <i class='bx bx-user-circle' ></i>
+                        <p>Perfil</p>
+                </section>
+            </a>
     
         </div>
     </div>
@@ -59,7 +65,11 @@
                         placeholder=" Senha:" class="dark-input">
                         <input type="password" id="confirmpassword" class="dark-input" placeholder=" Confirme a senha: ">
                         <button class="color-button"><a href="cadastro2.html">Seguinte</a></button>
-                    <p><a href="login.html">Já possui uma conta?/Login</a></p>
+                        <a href="login.html">
+                    <p>
+                            Já possui uma conta?/Login
+                        </p>
+                    </a>
                 </form>
             </label>
         </main>
