feat: add a news page

--- a/index.html
+++ b/index.html
@@ -38,10 +38,12 @@
                         <p>Jogos</p>
                     </section>
                 </a>
-                <section class="open-menu-options">
-                    <i class='bx bx-news' ></i>
-                    <p>Notícias</p>
-                </section>
+                <a href="pages/noticias.html">
+                    <section class="open-menu-options">
+                        <i class='bx bx-news' ></i>
+                        <p>Notícias</p>
+                    </section>
+                </a>
             </div>
     
             <a href="./pages/login.html">
