--- a/pages/cadastro1.html
+++ b/pages/cadastro1.html
@@ -10,12 +10,11 @@
     <link rel="stylesheet" href="../assets/style/header.css">
 
 </head>
-<body>
+<body onscroll="closeMenu()">
     <header id="regular-header">
             <i class='bx bx-menu menu-button' style="cursor: pointer;" onclick="openMenu()"></i>
             <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
     </header>
-
     <div class="open-header">
         <header id="open-header" class="hide">
             <i class='bx bx-left-arrow-alt menu-button'onclick="closeMenu()" style="cursor: pointer;" ></i>
@@ -23,7 +22,7 @@
         </header>
         <div class="open-menu">
             <div class="top-open-menu">
-                <a href="../index.html">
+                <a href="/">
                     <section class="open-menu-options">
                         <i class='bx bx-home-alt'></i>
                         <p>Início</p>
@@ -39,10 +38,12 @@
                         <p>Jogos</p>
                     </section>
                 </a>
-                <section class="open-menu-options">
-                    <i class='bx bx-news' ></i>
-                    <p>Notícias</p>
-                </section>
+                <a href="noticias.html">
+                    <section class="open-menu-options">
+                        <i class='bx bx-news' ></i>
+                        <p>Notícias</p>
+                    </section>
+                </a>
             </div>
     
             <a href="login.html">
@@ -51,8 +52,8 @@
                         <p>Perfil</p>
                 </section>
             </a>
-    
         </div>
+        <div class="dark-side hide"  onclick="closeMenu()"></div>
     </div>
 
     <div class="container">
