--- a/pages/cadastro2.html
+++ b/pages/cadastro2.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body onscroll="closeMenu()">
     <header id="regular-header">
         <i class='bx bx-menu menu-button' style="cursor: pointer;" onclick="openMenu()"></i>
         <img src="../assets/img/logo-prefeitura-horizontal.png" alt="">
@@ -26,7 +26,7 @@
     </header>
     <div class="open-menu">
         <div class="top-open-menu">
-            <a href="../index.html">
+            <a href="/">
                 <section class="open-menu-options">
                     <i class='bx bx-home-alt'></i>
                     <p>Início</p>
@@ -42,10 +42,12 @@
                     <p>Jogos</p>
                 </section>
             </a>
-            <section class="open-menu-options">
-                <i class='bx bx-news' ></i>
-                <p>Notícias</p>
-            </section>
+            <a href="noticias.html">
+                <section class="open-menu-options">
+                    <i class='bx bx-news' ></i>
+                    <p>Notícias</p>
+                </section>
+            </a>
         </div>
 
         <a href="login.html">
@@ -54,8 +56,8 @@
                     <p>Perfil</p>
             </section>
         </a>
-
     </div>
+    <div class="dark-side hide"  onclick="closeMenu()"></div>
 </div>
 
     <div class="container">
