feat: add links

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <div class="open-menu">
             <div class="top-open-menu">
-                <a href="/">
+                <a href="">
                     <section class="open-menu-options">
                         <i class='bx bx-home-alt'></i>
                         <p>Início</p>
@@ -76,10 +76,10 @@
                 </section>
                 <section class="pictures-container">
                     <p>Jogos</p>
-                    <img src="assets/img/games.png" alt="">
+                    <a href="pages/jogos.html"><img src="assets/img/games.png" alt=""></a>
                 </section>
                 <section class="pictures-container">
-                    <img src="assets/img/news.png" alt="">
+                    <a href="pages/noticias.html"><img src="assets/img/news.png" alt=""></a>
                     <p>Notícias</p>
                 </section>
             </div>
