--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </header>
         <div class="open-menu">
             <div class="top-open-menu">
-                <a href="">
+                <a href="#">
                     <section class="open-menu-options">
                         <i class='bx bx-home-alt'></i>
                         <p>Início</p>
