--- a/pages/cadastro2.html
+++ b/pages/cadastro2.html
@@ -26,7 +26,7 @@
     </header>
     <div class="open-menu">
         <div class="top-open-menu">
-            <a href="/">
+            <a href="../index.html">
                 <section class="open-menu-options">
                     <i class='bx bx-home-alt'></i>
                     <p>Início</p>
