--- a/pages/infos.html
+++ b/pages/infos.html
@@ -5,24 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../assets/style/infos.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="../assets/style/header.css">
 </head>
 <body>
     <div class="container">
         <h1>Informações Pessoais</h1>
-        <div class="name">
-            <h2>Nome</h2>
-            <input type="text" class="text-name">
-        </div>
         <div class="email">
             <h2>Email</h2>
             <input type="email">
+        </div>
+        <div class="name">
+            <h2>Nome</h2>
+            <input type="text" class="text-name">
         </div>
         <div class="birth">
             <h2>Data Nascimento</h2>
             <input type="date">
     </div>
-    <section class="sex-options-section">
+<div class="sex">
         <h2>Sexo</h2>
+    <section class="sex-options-section">
         <div class="sex-option">
             <input class="dark-input" type="radio" id="male" name="gender" value="male">
             <label for="male">Masculino</label>
@@ -33,26 +36,35 @@
         </div>
         <div class="sex-option">
             <input class="dark-input" type="radio" id="other" name="gender" value="other">
-            <label for="other">Outro</label>
+            <label for="other">Outros</label>
         </div>
     </section>
+</div>
     <div class="school">
         <h2>Escolaridade</h2>
         <select id="school" class="dark-input">
-            <option value="lvl1">Escolaridade:</option>
+            <option value="lvl1"></option>
             <option value="lvl2">Fundamental 1</option>
             <option value="lvl3">Fundamental 2</option>
             <option value="lvl4">Ensino Médio</option>
         </select>
     </div>
 
-    <h3>Alterar senha</h3>
-
-    <div class="buttons">
-        <button onclick="">Salvar alterações</button>
-        <button onclick="">Descartar Alterações</button>
+    <div class="forget-password">
+        <a href="#" class="link-password">
+            <h3>Alterar senha </h3>
+            <i class='bx bxs-lock-alt'></i>
+        </a>
     </div>
 
+    <div class="buttons">
+        <button onclick="" class="save-button">Salvar alterações</button>
+        <button onclick="" class="descart-button">Descartar Alterações</button>
+    </div>
+
+    <div class="delete-account">Excluir Conta
+        <i class='bx bxs-trash'></i>
+    </div>
 
     </div>
 </body>
