--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Perfil - EPTRAN</title>
+
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../assets/style/header.css">
     <link rel="stylesheet" href="../assets/style/perfil.css">
@@ -62,13 +63,22 @@
             <main>
                 <section class="profile">
                     <div class="profile-picture">
-                        <img src="../assets/img/default-user.png" alt="">
-                        <i class='bx bxs-camera'></i>
+                        <img src="../assets/img/default-user.png" alt="" class="profile-img">
+                        <img src="../assets/img/camera-icon.png" alt="" class="camera">
                     </div>
                     <div class="name-n-email">
                         <h2>Fulano de Tal</h2>
                         <p>taldefulano@gmail.com</p>
                     </div>
+                </section>
+
+                <section class="options">
+                    <i class='bx bx-notepad'></i>
+                    <div class="section-texts">
+                        <h3>Dados Pessoais</h3>
+                        <p>Edite as informações de seu registro aqui</p>
+                    </div>
+                    <i class='bx bx-chevron-right'></i>
                 </section>
             </main>            
         </div>
