feat: finish account page

--- a/pages/jogos.html
+++ b/pages/jogos.html
@@ -47,7 +47,7 @@
             </a>
         </div>
 
-        <a href="login.html">
+        <a href="perfil.html">
             <section class="open-menu-options user">
                     <i class='bx bx-user-circle' ></i>
                     <p>Perfil</p>
