--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -80,6 +80,33 @@
                     </div>
                     <i class='bx bx-chevron-right'></i>
                 </section>
+
+                <section class="options">
+                    <i class='bx bx-joystick'></i>
+                    <div class="section-texts">
+                        <h3>Progesso</h3>
+                        <p>Acompanhe aqui o seu progresso nos jogos</p>
+                    </div>
+                    <i class='bx bx-chevron-right'></i>
+                </section>
+
+                <section class="options">
+                    <i class='bx bx-news' ></i>
+                    <div class="section-texts">
+                        <h3>Notícias Salvas</h3>
+                        <p>Veja as notícias que você salvou aqui</p>
+                    </div>
+                    <i class='bx bx-chevron-right'></i>
+                </section>
+
+                <section class="options">
+                    <i class='bx bx-log-out'></i>
+                    <div class="section-texts">
+                        <h3>Logout</h3>
+                        <p>Saia da sua conta aqui</p>
+                    </div>
+                    <i class='bx bx-chevron-right'></i>
+                </section>
             </main>            
         </div>
     
